--- a/styles/output/calculus-pdf.css
+++ b/styles/output/calculus-pdf.css
@@ -3548,6 +3548,10 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   margin-left: 16px;
 }
 
+.os-key-equations-container > section {
+  margin-bottom: 0;
+}
+
 .os-key-equations-container > section > .os-table.os-unstyled-container {
   margin-bottom: 0;
 }
